[project]
name = "feast-or-famine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pybaseball",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]

[tool.uv.sources]
pybaseball = { git = "https://github.com/jldbc/pybaseball" }
